@@ -1,5 +1,11 @@
 2006-12-28 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
+	* CamelliaTransform.cs:
+	* CamelliaTransformLE.cs:
+	* CamelliaTransformBE.cs: 共通部分を基底クラスに統合
+
+2006-12-28 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
 	* CamelliaTransformBE.cs: LE版と同程度に最適化
 
 2006-12-28 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
